Refactor exception handling; rename ErrorResponse package and update related imports