@@ -1,6 +1,7 @@
 package org.pdzsoftware.featuremanager.service;
 
 import lombok.RequiredArgsConstructor;
+import org.apache.commons.lang3.StringUtils;
 import org.pdzsoftware.featuremanager.config.RedisProperties;
 import org.springframework.data.redis.core.RedisTemplate;
 import org.springframework.stereotype.Service;
@@ -15,6 +16,7 @@ public class FeatureCacheService {
     private static final long FIVE_MINUTES_IN_SECONDS = 5L * 60L;
     private static final long ONE_HOUR_IN_SECONDS = 60L * 60L;
     private static final long EPOCH_MILLIS_THRESHOLD = 10_000_000_000L;
+    private static final long ONE_SECOND_IN_MILLIS = 1_000L;
 
     private final RedisTemplate<String, String> redisTemplate;
     private final RedisProperties redisProperties;
@@ -34,15 +36,15 @@ public class FeatureCacheService {
     }
 
     public long getUserTransactionCount5Min(String userId) {
-        long now = System.currentTimeMillis() / 1000;
-        long windowStart = now - FIVE_MINUTES_IN_SECONDS;
-        return getTransactionCountInWindow(userId, windowStart, now);
+        long nowInSeconds = System.currentTimeMillis() / ONE_SECOND_IN_MILLIS;
+        long windowStart = nowInSeconds - FIVE_MINUTES_IN_SECONDS;
+        return getTransactionCountInWindow(userId, windowStart, nowInSeconds);
     }
 
     public long getUserTransactionCount1Hour(String userId) {
-        long now = System.currentTimeMillis() / 1000;
-        long windowStart = now - ONE_HOUR_IN_SECONDS;
-        return getTransactionCountInWindow(userId, windowStart, now);
+        long nowInSeconds = System.currentTimeMillis() / ONE_SECOND_IN_MILLIS;
+        long windowStart = nowInSeconds - ONE_HOUR_IN_SECONDS;
+        return getTransactionCountInWindow(userId, windowStart, nowInSeconds);
     }
 
     private long getTransactionCountInWindow(String userId, long windowStart, long windowEnd) {
@@ -61,25 +63,26 @@ public class FeatureCacheService {
 
         long lastTransactionTime = Long.parseLong(lastTimestamp);
 
-        long now = System.currentTimeMillis() / 1000;
-        return now - lastTransactionTime;
+        long nowInSeconds = System.currentTimeMillis() / ONE_SECOND_IN_MILLIS;
+        return nowInSeconds - lastTransactionTime;
     }
 
     public void cleanupOldTransactions(String userId) {
         String userTransactionKey = USER_TRANSACTIONS_KEY_PREFIX + userId;
-        long now = System.currentTimeMillis() / 1000;
-        long cutoffTime = now - ONE_HOUR_IN_SECONDS;
+        long nowInSeconds = System.currentTimeMillis() / ONE_SECOND_IN_MILLIS;
+        long cutoffTime = nowInSeconds - ONE_HOUR_IN_SECONDS;
 
         redisTemplate.opsForZSet().removeRangeByScore(userTransactionKey, 0, cutoffTime);
     }
 
     private String buildTransactionMember(String transactionId) {
-        String baseId = (transactionId == null || transactionId.isBlank()) ? "generated" : transactionId;
-        return baseId + ":" + UUID.randomUUID();
+        boolean isTransactionIdMissing = StringUtils.isBlank(transactionId);
+        String memberPrefix = isTransactionIdMissing ? UUID.randomUUID().toString() : transactionId;
+        return String.format("%s:%s", memberPrefix, System.currentTimeMillis());
     }
 
     private long normalizeToEpochSeconds(long timestamp) {
-        return timestamp > EPOCH_MILLIS_THRESHOLD ? timestamp / 1000 : timestamp;
+        return timestamp > EPOCH_MILLIS_THRESHOLD ? timestamp / ONE_SECOND_IN_MILLIS : timestamp;
     }
 
     public void clearUserCache(String userId) {
